--- a/React/Session-22/users-management-app/src/App.css
+++ b/React/Session-22/users-management-app/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.MuiDialogTitle-root{
+  background-color: #000;
+  color: #fff;
+  margin-bottom: 100px;
+}
